--- a/www/catalog-2.html
+++ b/www/catalog-2.html
@@ -426,7 +426,7 @@
 				</div>
 				<div class="bx-filter-button-box">
 					<div class="bx-filter-block">
-						<input type="submit" id="del_filter" value="Сбросить фильтр" />
+						<input type="reset" id="del_filter" value="Сбросить фильтр" />
 						<input type="submit" id="set_filter" value="Применить фильтр" />
 					</div>
 				</div>
