--- a/www/promo-action.html
+++ b/www/promo-action.html
@@ -239,7 +239,7 @@
 	</nav>
 </header>
 <!-- /header -->
-<div class="container content blog">
+<div class="container content action">
 	<div class="row">
 		<div class="col-xs-6"></div>
 		<div class="col-xs-6 free-shiping free-shiping-2">
@@ -257,93 +257,215 @@
 		<div class="col-xs-12">
 			<div class="ol breadcrumb">
 				<li><a href="#">Главная</a></li>
-				<li class="active">Блог</li>
+				<li><a href="#">Акции</a></li>
+				<li class="active">Текущая акиця</li>
 			</div>
 		</div>
 	</div>
 	<div class="row">
-		<div class="col-xs-12 blog-intro">
-			<p>С другой стороны сложившаяся структура организации представляет собой интересный эксперимент проверки соответствующий условий активизации. Значимость этих проблем настолько очевидна, что консультация с широким активом требуют от нас анализа существенных финансовых и административных условий. Не следует, однако забывать, что укрепление и развитие структуры позволяет оценить значение существенных финансовых.</p>
+		<div class="col-xs-12">
+			<h1>С другой стороны сложившаяся структура организации представляет собой интересный эксперимент проверки соответствующий условий активизации.</h1>
+			<div class="promo-action-banner">	
+			</div>
+			<p>С другой стороны сложившаяся структура организации представляет собой интересный эксперимент проверки соответствующий условий активизации. Значимость этих проблем настолько очевидна, что консультация с широким активом требуют от нас анализа существенных финансовых и административных условий. Не следует, однако забывать, что укрепление и развитие структуры позволяет оценить значение существенных финансовых и административных условий. Разнообразный и богатый опыт новая модель организационной деятельности в значительной степени обуславливает создание дальнейших направлений развития. Идейные соображения высшего порядка, а также консультация с широким активом в значительной степени обуславливает создание форм развития. Товарищи! сложившаяся структура организации позволяет оценить значение систем массового участия.</p>
 		</div>
 	</div>
 	<div class="row">
-		<form id="blog-sorting" action="" method="POST" class="col-xs-12">
-			<h2>Сортируй</h2>
+		<div class="col-xs-3 bx-filter">
+			<form action="" method="GET" class="smartfilter">
+				<div class="bx-filter-parameters-box range-slider">
+					<div class="bx-filter-parameters-box-title"><span>Цена, руб.</span></div>
+					<div class="bx-filter-block row">
+						<div class="col-xs-6 bx-filter-input-container">
+							<input id="min-cost" type="text" value="24" />
+						</div>
+						<div class="col-xs-6 bx-filter-input-container">
+							<input id="max-cost" type="text" value="5082" />
+						</div>
+						<div class="col-xs-12 bx-ui-slider-track-container">
+							<div class="slider-labels">
+								<div class="bx-ui-slider-part">24</div>
+								<div class="bx-ui-slider-part">1289</div>
+								<div class="bx-ui-slider-part">2553</div>
+								<div class="bx-ui-slider-part">3818</div>
+								<div class="bx-ui-slider-part">5082</div>
+							</div>
+							<div class="bx-ui-slider-track"></div>
+						</div>
+					</div>
+				</div>
+				<div class="bx-filter-parameters-box checkboxes">
+					<div class="bx-filter-parameters-box-title"><span>Бренд</span></div>
+					<div class="bx-filter-block">
+						<div class="checkbox">
+							<label for="brand-1" class="bx-filter-param-label">
+								<span class="bx-filter-input-checkbox">
+									<input id="brand-1" type="checkbox">
+									<span class="bx-filter-param-text">AXE</span>
+								</span>
+							</label>
+						</div>
+						<div class="checkbox">
+							<label for="brand-2" class="bx-filter-param-label">
+								<span class="bx-filter-input-checkbox">
+									<input id="brand-2" type="checkbox">
+									<span class="bx-filter-param-text">Bruno Banani</span>
+								</span>
+							</label>
+						</div>
+						<div class="checkbox">
+							<label for="brand-3" class="bx-filter-param-label">
+								<span class="bx-filter-input-checkbox">
+									<input id="brand-3" type="checkbox">
+									<span class="bx-filter-param-text">Calvin Klein</span>
+								</span>
+							</label>
+						</div>
+						<div class="checkbox">
+							<label for="brand-4" class="bx-filter-param-label">
+								<span class="bx-filter-input-checkbox">
+									<input id="brand-4" type="checkbox">
+									<span class="bx-filter-param-text">Calorina Herrera</span>
+								</span>
+							</label>
+						</div>
+						<div class="checkbox">
+							<label for="brand-5" class="bx-filter-param-label">
+								<span class="bx-filter-input-checkbox">
+									<input id="brand-5" type="checkbox">
+									<span class="bx-filter-param-text">Christina Aguilera</span>
+								</span>
+							</label>
+						</div>
+						<div class="checkbox">
+							<label for="brand-6" class="bx-filter-param-label">
+								<span class="bx-filter-input-checkbox">
+									<input id="brand-6" type="checkbox">
+									<span class="bx-filter-param-text">Christine Lavoisier</span>
+								</span>
+							</label>
+						</div>
+						<div class="checkbox">
+							<label for="brand-7" class="bx-filter-param-label">
+								<span class="bx-filter-input-checkbox">
+									<input id="brand-7" type="checkbox">
+									<span class="bx-filter-param-text">City</span>
+								</span>
+							</label>
+						</div>
+						<div class="checkbox">
+							<label for="brand-8" class="bx-filter-param-label">
+								<span class="bx-filter-input-checkbox">
+									<input id="brand-8" type="checkbox">
+									<span class="bx-filter-param-text">DOLCE&GABBANA</span>
+								</span>
+							</label>
+						</div>
+					</div>
+				</div>
+				<div class="bx-filter-button-box">
+					<div class="bx-filter-block">
+						<input type="reset" id="del_filter" value="Сбросить фильтр" />
+						<input type="submit" id="set_filter" value="Применить фильтр" />
+					</div>
+				</div>
+			</form>
+		</div>
+		<div class="col-xs-9">
 			<div class="row">
-				<div class="col-xs-5">
-					<label for="blog-sorting-keyword">Ключевое слово</label>
-					<input type="text" id="blog-sorting-keyword" />
+				<div class="col-xs-12 heading"><span>Товары акции</span></div>
+			</div>
+			<div class="row goods">
+				<div class="col-xs-4">
+					<div class="item">
+						<div class="image" style="background-image: url('images/tovar-1.png');"><div class="zoom"></div></div>
+						<a href="product.html">
+							<div class="title">Инициатик - средства против первых морщин</div>
+							<div class="description">Флюид против первых морщин Инициатик 40 мл. Разглаживасет, увлажняет. защищает.</div>
+							<div class="price">
+								<div>3593.37 <span>руб</span></div>
+							</div>
+						</a>
+						<a href="javascript:void(0);" class="to-the-cart"></a>
+					</div>
 				</div>
-				<div class="col-xs-5">
-					<label for="blog-sorting-title">Название статьи</label>
-					<input type="text"id="blog-sorting-title" />
+				<div class="col-xs-4">
+					<div class="item sale">
+						<div class="label label-right">ЛОВИ<br>МОМЕНТ</div>
+						<div class="image" style="background-image: url('images/tovar-2.jpg');"><div class="zoom"></div></div>
+						<a href="product.html">
+							<div class="title">Инициатик - средства против первых морщин</div>
+							<div class="description">Флюид против первых морщин Инициатик 40 мл. Разглаживасет, увлажняет. защищает. длинный текст длинный текст длинный текст длинный текст длинный текст длинный текст длинный текст длинный текст длинный текст длинный текст</div>
+							<div class="price">
+								<div>3593.37 <span>руб</span></div>
+							</div>
+						</a>
+						<a href="javascript:void(0);" class="to-the-cart"></a>
+					</div>
 				</div>
-				<div class="col-xs-2">
-					<input type="submit" value="Применить">
+				<div class="col-xs-4">
+					<div class="item">
+						<div class="image" style="background-image: url('images/tovar-2.jpg');"><div class="zoom"></div></div>
+						<a href="product.html">
+							<div class="title">Инициатик - средства против первых морщин</div>
+							<div class="description">Флюид против первых морщин Инициатик 40 мл. Разглаживасет, увлажняет. защищает.</div>
+							<div class="price">
+								<div>3593.37 <span>руб</span></div>
+							</div>
+						</a>
+						<a href="javascript:void(0);" class="to-the-cart"></a>
+					</div>
+				</div>
+				<div class="col-xs-4">
+					<div class="item sale">
+						<div class="label label-left thumb-up"></div>
+						<div class="image" style="background-image: url('images/tovar-2.jpg');"><div class="zoom"></div></div>
+						<a href="product.html">
+							<div class="title">Инициатик - средства против первых морщин</div>
+							<div class="description">Флюид против первых морщин Инициатик 40 мл. Разглаживасет, увлажняет. защищает. длинный текст длинный текст длинный текст длинный текст длинный текст длинный текст длинный текст длинный текст длинный текст длинный текст</div>
+							<div class="price">
+								<div>3593.37 <span>руб</span></div>
+							</div>
+						</a>
+						<a href="javascript:void(0);" class="to-the-cart"></a>
+					</div>
+				</div>
+				<div class="col-xs-4">
+					<div class="item">
+						<div class="image" style="background-image: url('images/tovar-2.jpg');"><div class="zoom"></div></div>
+						<a href="product.html">
+							<div class="title">Инициатик - средства против первых морщин</div>
+							<div class="description">Флюид против первых морщин Инициатик 40 мл. Разглаживасет, увлажняет. защищает.</div>
+							<div class="price">
+								<div>3593.37 <span>руб</span></div>
+							</div>
+						</a>
+						<a href="javascript:void(0);" class="to-the-cart"></a>
+					</div>
+				</div>
+				<div class="col-xs-4">
+					<div class="item">
+						<div class="image" style="background-image: url('images/tovar-2.jpg');"><div class="zoom"></div></div>
+						<a href="product.html">
+							<div class="title">Инициатик - средства против первых морщин</div>
+							<div class="description">Флюид против первых морщин Инициатик 40 мл. Разглаживасет, увлажняет. защищает.</div>
+							<div class="price">
+								<div>3593.37 <span>руб</span></div>
+							</div>
+						</a>
+						<a href="javascript:void(0);" class="to-the-cart"></a>
+					</div>
 				</div>
 			</div>
-		</form>
-	</div>
-	<div class="row">
-		<div class="col-xs-4">
-			<section>
-				<div class="meta">
-					<span class="date">10.12.2015</span><span class="separator">|</span><span class="category"><a href="#">Название раздела</a></span>
-				</div>
-				<div class="image" style="background-image:url('images/product-image.jpg');">
-					<img src="images/product-image.jpg" alt="Изображение для статьи 1" />
-				</div>
-				<article>
-					<h3>С другой стороны сложившаяся структура организации</h3>
-					<p>С другой стороны сложившаяся структура организации представляет собой интересный эксперимент проверки соответствующий условий активизации.</p>
-					<div class="row">
-						<div class="col-xs-12 pager"><span class="next"><a href="article.html">Читать еще</a></span></div>
-					</div>
-				</article>
-			</section>
-			<section>
-				<div class="meta">
-					<span class="date">10.12.2015</span><span class="separator">|</span><span class="category"><a href="#">Название раздела</a></span>
-				</div>
-				<div class="image" style="background-image:url('images/product-image.jpg');">
-					<img src="images/product-image.jpg" alt="Изображение для статьи 1" />
-				</div>
-				<article>
-					<h3>С другой стороны сложившаяся структура организации</h3>
-					<p>С другой стороны сложившаяся структура организации представляет собой интересный эксперимент проверки соответствующий условий активизации.</p>
-					<div class="row">
-						<div class="col-xs-12 pager"><span class="next"><a href="article.html">Читать еще</a></span></div>
-					</div>
-				</article>
-			</section>
+			<div class="row pagination-row">
+				<ul class="pagination">
+					<li class="active"><a href="#">1</a></li>
+					<li><a href="#">2</a></li>
+					<li><a href="#">3</a></li>
+					<li><a href="#">4</a></li>
+				</ul>
+			</div>
 		</div>
-		<div class="col-xs-8">
-			<section class="big">
-				<div class="meta">
-					<span class="date">10.12.2015</span><span class="separator">|</span><span class="category"><a href="#">Название раздела</a></span>
-				</div>
-				<div class="image" style="background-image:url('images/product-image.jpg');">
-					<img src="images/product-image.jpg" alt="Изображение для статьи 1" />
-				</div>
-				<article>
-					<h3>С другой стороны сложившаяся структура организации представляет собой интересный эксперимент проверки соответствующий условий активизации. Значимость этих проблем настолько очевидна, что консультация с широким</h3>
-					<p>С другой стороны сложившаяся структура организации представляет собой интересный эксперимент проверки соответствующий условий активизации. Значимость этих проблем настолько очевидна, что консультация с широким активом требуют от нас анализа существенных финансовых и административных условий. Не следует, однако забывать, что укрепление и развитие структуры позволяет оценить значение существенных финансовых и административных условий. Разнообразный и богатый опыт новая модель организационной деятельности в значительной степени обуславливает создание дальнейших направлений развития. Идейные соображения высшего порядка, а также консультация с широким активом в значительной степени обуславливает создание форм развития.</p>
-					<p>Товарищи! сложившаяся структура организации позволяет оценить значение систем массового участия. 
-					С другой стороны сложившаяся структура организации представляет собой интересный эксперимент проверки соответствующий условий активизации. Значимость этих проблем настолько очевидна, что консультация с широким активом требуют от нас анализа существенных финансовых и административных условий. Не следует, однако забывать, что укрепление и развитие структуры позволяет оценить значение существенных финансовых и административных условий. Разнообразный и богатый опыт новая модель организационной деятельности в значительной степени обуславливает создание дальнейших направлений развития. Идейные соображения высшего порядка, а также консультация с широким активом в значительной степени обуславливает создание форм развития. </p>
-					<div class="row">
-						<div class="col-xs-12 pager"><span class="next"><a href="article.html">Читать еще</a></span></div>
-					</div>
-				</article>
-			</section>
-		</div>
-	</div>
-	<div class="row pagination-row">
-		<ul class="pagination">
-			<li class="active"><a href="#">1</a></li>
-			<li><a href="#">2</a></li>
-			<li><a href="#">3</a></li>
-			<li><a href="#">4</a></li>
-		</ul>
 	</div>
 	<div class="row">
 		<div class="col-xs-12 heading"><span>Товары, которые Вы недавно смотрели</span></div>
