--- a/www/article.html
+++ b/www/article.html
@@ -239,7 +239,7 @@
 	</nav>
 </header>
 <!-- /header -->
-<div class="container content blog">
+<div class="container content single">
 	<div class="row">
 		<div class="col-xs-6"></div>
 		<div class="col-xs-6 free-shiping free-shiping-2">
@@ -262,88 +262,58 @@
 		</div>
 	</div>
 	<div class="row">
-		<div class="col-xs-12 blog-intro">
-			<p>С другой стороны сложившаяся структура организации представляет собой интересный эксперимент проверки соответствующий условий активизации. Значимость этих проблем настолько очевидна, что консультация с широким активом требуют от нас анализа существенных финансовых и административных условий. Не следует, однако забывать, что укрепление и развитие структуры позволяет оценить значение существенных финансовых.</p>
-		</div>
-	</div>
-	<div class="row">
-		<form id="blog-sorting" action="" method="POST" class="col-xs-12">
-			<h2>Сортируй</h2>
-			<div class="row">
-				<div class="col-xs-5">
-					<label for="blog-sorting-keyword">Ключевое слово</label>
-					<input type="text" id="blog-sorting-keyword" />
-				</div>
-				<div class="col-xs-5">
-					<label for="blog-sorting-title">Название статьи</label>
-					<input type="text"id="blog-sorting-title" />
-				</div>
-				<div class="col-xs-2">
-					<input type="submit" value="Применить">
-				</div>
+		<section class="col-xs-12">
+			<h1>С другой стороны сложившаяся структура организации представляет собой интересный эксперимент проверки соответствующий условий активизации.</h1>
+			<div class="meta">
+				<span class="date">10.12.2015</span><span class="separator">|</span><span class="category"><a href="#">Название раздела</a></span>
 			</div>
-		</form>
-	</div>
-	<div class="row">
-		<div class="col-xs-4">
-			<section>
-				<div class="meta">
-					<span class="date">10.12.2015</span><span class="separator">|</span><span class="category"><a href="#">Название раздела</a></span>
-				</div>
-				<div class="image" style="background-image:url('images/product-image.jpg');">
-					<img src="images/product-image.jpg" alt="Изображение для статьи 1" />
-				</div>
-				<article>
-					<h3>С другой стороны сложившаяся структура организации</h3>
-					<p>С другой стороны сложившаяся структура организации представляет собой интересный эксперимент проверки соответствующий условий активизации.</p>
-					<div class="row">
-						<div class="col-xs-12 pager"><span class="next"><a href="article.html">Читать еще</a></span></div>
-					</div>
-				</article>
-			</section>
-			<section>
-				<div class="meta">
-					<span class="date">10.12.2015</span><span class="separator">|</span><span class="category"><a href="#">Название раздела</a></span>
-				</div>
-				<div class="image" style="background-image:url('images/product-image.jpg');">
-					<img src="images/product-image.jpg" alt="Изображение для статьи 1" />
-				</div>
-				<article>
-					<h3>С другой стороны сложившаяся структура организации</h3>
-					<p>С другой стороны сложившаяся структура организации представляет собой интересный эксперимент проверки соответствующий условий активизации.</p>
-					<div class="row">
-						<div class="col-xs-12 pager"><span class="next"><a href="article.html">Читать еще</a></span></div>
-					</div>
-				</article>
-			</section>
-		</div>
-		<div class="col-xs-8">
-			<section class="big">
-				<div class="meta">
-					<span class="date">10.12.2015</span><span class="separator">|</span><span class="category"><a href="#">Название раздела</a></span>
-				</div>
-				<div class="image" style="background-image:url('images/product-image.jpg');">
-					<img src="images/product-image.jpg" alt="Изображение для статьи 1" />
-				</div>
-				<article>
-					<h3>С другой стороны сложившаяся структура организации представляет собой интересный эксперимент проверки соответствующий условий активизации. Значимость этих проблем настолько очевидна, что консультация с широким</h3>
-					<p>С другой стороны сложившаяся структура организации представляет собой интересный эксперимент проверки соответствующий условий активизации. Значимость этих проблем настолько очевидна, что консультация с широким активом требуют от нас анализа существенных финансовых и административных условий. Не следует, однако забывать, что укрепление и развитие структуры позволяет оценить значение существенных финансовых и административных условий. Разнообразный и богатый опыт новая модель организационной деятельности в значительной степени обуславливает создание дальнейших направлений развития. Идейные соображения высшего порядка, а также консультация с широким активом в значительной степени обуславливает создание форм развития.</p>
-					<p>Товарищи! сложившаяся структура организации позволяет оценить значение систем массового участия. 
-					С другой стороны сложившаяся структура организации представляет собой интересный эксперимент проверки соответствующий условий активизации. Значимость этих проблем настолько очевидна, что консультация с широким активом требуют от нас анализа существенных финансовых и административных условий. Не следует, однако забывать, что укрепление и развитие структуры позволяет оценить значение существенных финансовых и административных условий. Разнообразный и богатый опыт новая модель организационной деятельности в значительной степени обуславливает создание дальнейших направлений развития. Идейные соображения высшего порядка, а также консультация с широким активом в значительной степени обуславливает создание форм развития. </p>
-					<div class="row">
-						<div class="col-xs-12 pager"><span class="next"><a href="article.html">Читать еще</a></span></div>
-					</div>
-				</article>
-			</section>
-		</div>
-	</div>
-	<div class="row pagination-row">
-		<ul class="pagination">
-			<li class="active"><a href="#">1</a></li>
-			<li><a href="#">2</a></li>
-			<li><a href="#">3</a></li>
-			<li><a href="#">4</a></li>
-		</ul>
+			<article>
+				<img src="images/product-image.jpg" alt="Блог - изображение в статье" class="float-left" />
+				<p>С другой стороны сложившаяся структура организации представляет собой интересный эксперимент проверки соответствующий условий активизации. Значимость этих проблем настолько очевидна, что консультация с широким активом требуют от нас анализа существенных финансовых и административных условий. Не следует, однако забывать, что укрепление и развитие структуры позволяет оценить значение существенных финансовых и административных условий. Разнообразный и богатый опыт новая модель организационной деятельности в значительной степени обуславливает создание дальнейших направлений развития. Идейные соображения высшего порядка, а также консультация с широким активом в значительной степени обуславливает создание форм развития. Товарищи! сложившаяся структура организации позволяет оценить значение систем массового участия.Товарищи! консультация с широким активом влечет за собой процесс внедрения и модернизации направлений прогрессивного развития. Равным образом постоянный количественный рост и сфера нашей активности в значительной степени обуславливает создание соответствующий условий активизации.
+				Задача организации, в особенности же дальнейшее развитие различных форм деятельности способствует подготовки и реализации модели развития. Разнообразный и богатый опыт рамки и место обучения кадров представляет собой интересный эксперимент проверки направлений прогрессивного развития.</p>
+				<p>Не следует, <a href="#">однако забывать</a>, что реализация намеченных плановых заданий способствует подготовки и реализации модели развития. Разнообразный и богатый опыт дальнейшее развитие различных форм деятельности способствует подготовки и реализации соответствующий условий активизации. Товарищи! укрепление и развитие структуры способствует подготовки и реализации позиций, занимаемых участниками в отношении поставленных задач. Повседневная практика показывает, что укрепление и развитие структуры играет важную роль в формировании существенных финансовых и административных условий. Повседневная практика показывает, что рамки и место обучения кадров обеспечивает широкому кругу (специалистов) участие в формировании системы обучения кадров, соответствует насущным потребностям.
+				Идейные соображения высшего порядка, а также рамки и место обучения кадров требуют от нас анализа новых предложений. Разнообразный и богатый опыт дальнейшее развитие различных форм деятельности влечет за собой процесс внедрения и модернизации дальнейших направлений развития. Таким образом консультация с широким активом позволяет оценить значение новых предложений. Разнообразный и богатый опыт постоянный количественный рост и сфера нашей активности играет важную роль в формировании позиций, занимаемых участниками в отношении поставленных задач. Товарищи! рамки и место обучения кадров позволяет выполнять важные задания по разработке позиций, занимаемых участниками в отношении поставленных задач.</p>
+				<p><strong>Задача организации</strong>, в особенности же дальнейшее развитие различных форм деятельности способствует подготовки и реализации модели развития. Разнообразный и богатый опыт рамки и место обучения кадров представляет собой интересный эксперимент проверки направлений прогрессивного развития.</p>
+				<p>Задача организации, в особенности же дальнейшее развитие различных форм деятельности способствует подготовки и реализации модели развития. <em>Разнообразный и богатый опыт рамки и место обучения кадров представляет собой интересный эксперимент проверки направлений прогрессивного развития.</em></p>
+				<ul>
+					<li><em>Не следует, однако забывать</em></li>
+					<li>реализация намеченных</li>
+					<li>плановых заданий способствует</li>
+					<li>подготовки и реализации модели развития</li>
+				</ul>
+				<ol>
+					<li><em>Не следует, однако забывать</em></li>
+					<li>реализация намеченных</li>
+					<li>плановых заданий способствует</li>
+					<li>подготовки и реализации модели развития</li>
+				</ol>
+				<h2>Разнообразный и богатый опыт постоянный количественный рост</h2>
+				<p>различных форм деятельности влечет за собой процесс внедрения и модернизации дальнейших направлений развития</p>
+				<blockquote>Товарищи! укрепление и развитие структуры способствует подготовки и реализации позиций, занимаемых участниками в отношении поставленных задач.</blockquote>
+				<table>
+					<thead>
+						<tr>
+							<th>Колонка</th>
+							<th>Колонка</th>
+							<th>Колонка</th>
+						</tr>
+					</thead>
+					<tbody>
+						<tr>
+							<td>содержимое</td>
+							<td>содержимое</td>
+							<td>содержимое</td>
+						</tr>
+						<tr>
+							<td>содержимое</td>
+							<td>содержимое</td>
+							<td>содержимое</td>
+						</tr>
+					</tbody>
+				</table>
+			</article>
+		</section>
+		<div class="col-xs-12 pager"><span class="previous"><a href="blog.html">Назад</a></span></div>
 	</div>
 	<div class="row">
 		<div class="col-xs-12 heading"><span>Товары, которые Вы недавно смотрели</span></div>
