--- a/www/cart.html
+++ b/www/cart.html
@@ -239,7 +239,7 @@
 	</nav>
 </header>
 <!-- /header -->
-<div class="container content blog">
+<div class="container content cart">
 	<div class="row">
 		<div class="col-xs-6"></div>
 		<div class="col-xs-6 free-shiping free-shiping-2">
@@ -257,170 +257,116 @@
 		<div class="col-xs-12">
 			<div class="ol breadcrumb">
 				<li><a href="#">Главная</a></li>
-				<li class="active">Блог</li>
+				<li class="active">Корзина</li>
 			</div>
 		</div>
 	</div>
 	<div class="row">
-		<div class="col-xs-12 blog-intro">
-			<p>С другой стороны сложившаяся структура организации представляет собой интересный эксперимент проверки соответствующий условий активизации. Значимость этих проблем настолько очевидна, что консультация с широким активом требуют от нас анализа существенных финансовых и административных условий. Не следует, однако забывать, что укрепление и развитие структуры позволяет оценить значение существенных финансовых.</p>
+		<div class="col-xs-12 stages">
+			<div class="active">Корзина</div>
+			<div></div>
+			<div>Доставка/Оплата</div>
+			<div></div>
+			<div>Подтверждение</div>
 		</div>
 	</div>
 	<div class="row">
-		<form id="blog-sorting" action="" method="POST" class="col-xs-12">
-			<h2>Сортируй</h2>
-			<div class="row">
-				<div class="col-xs-5">
-					<label for="blog-sorting-keyword">Ключевое слово</label>
-					<input type="text" id="blog-sorting-keyword" />
-				</div>
-				<div class="col-xs-5">
-					<label for="blog-sorting-title">Название статьи</label>
-					<input type="text"id="blog-sorting-title" />
-				</div>
-				<div class="col-xs-2">
-					<input type="submit" value="Применить">
-				</div>
-			</div>
+		<form class="col-xs-12">
+			<table>
+				<thead>
+					<tr>
+						<th>Пор.<br>номер</th>
+						<th>Фото</th>
+						<th>Наименование</th>
+						<th>Общие<br>характеристики</th>
+						<th>Кол-во</th>
+						<th>Стоимость<br>товара</th>
+						<th>Сумма<br>(со скидкой)</th>
+						<th>Действие</th>
+					</tr>
+				</thead>
+				<tbody>
+					<tr>
+						<td>1</td>
+						<td><img src="images/product-image.jpg" alt="Изображение товара"></td>
+						<td>Инициатик 40 мл. Разглаживасет, увлажняет. защищает.</td>
+						<td>
+							<ul>
+								<li>40 мл.</li>
+								<li>Фиолетовый, деревянная основа</li>
+								<li>крепление на металлические болты</li>
+								<li>Водоотталкивающее покрытие</li>
+							</ul>
+						</td>
+						<td>
+							<div class="count">
+								<input id="cart-item-1" type="number" min="1" max="999" step="1" value="1" />
+							</div>
+						</td>
+						<td>3593.37</td>
+						<td>
+							<div class="special-price">3597.37</div>
+							<div class="old-price">3597.37</div>
+						</td>
+						<td>
+							<a href="#" class="trash"></a>
+						</td>
+					</tr>
+					<tr>
+						<td>2</td>
+						<td><img src="images/product-image.jpg" alt="Изображение товара"></td>
+						<td>Инициатик 40 мл. Разглаживасет, увлажняет. защищает.</td>
+						<td>
+							<ul>
+								<li>40 мл.</li>
+								<li>Фиолетовый, деревянная основа</li>
+								<li>крепление на металлические болты</li>
+								<li>Водоотталкивающее покрытие</li>
+							</ul>
+						</td>
+						<td>
+							<div class="count">
+								<input id="cart-item-2" type="number" min="1" max="999" step="1" value="1" />
+							</div>
+						</td>
+						<td>3593.37</td>
+						<td>
+							<div class="special-price">3597.37</div>
+							<div class="old-price">3597.37</div>
+						</td>
+						<td>
+							<a href="#" class="trash"></a>
+						</td>
+					</tr>
+					<tr>
+						<td>3</td>
+						<td><img src="images/product-image.jpg" alt="Изображение товара"></td>
+						<td>Инициатик 40 мл. Разглаживасет, увлажняет. защищает.</td>
+						<td>
+							<ul>
+								<li>40 мл.</li>
+								<li>Фиолетовый, деревянная основа</li>
+								<li>крепление на металлические болты</li>
+								<li>Водоотталкивающее покрытие</li>
+							</ul>
+						</td>
+						<td>
+							<div class="count">
+								<input id="cart-item-3" type="number" min="1" max="999" step="1" value="1" />
+							</div>
+						</td>
+						<td>3593.37</td>
+						<td>
+							<div class="special-price">3597.37</div>
+							<div class="old-price">3597.37</div>
+						</td>
+						<td>
+							<a href="#" class="trash"></a>
+						</td>
+					</tr>
+				</tbody>
+			</table>
 		</form>
-	</div>
-	<div class="row">
-		<div class="col-xs-4">
-			<section>
-				<div class="meta">
-					<span class="date">10.12.2015</span><span class="separator">|</span><span class="category"><a href="#">Название раздела</a></span>
-				</div>
-				<div class="image" style="background-image:url('images/product-image.jpg');">
-					<img src="images/product-image.jpg" alt="Изображение для статьи 1" />
-				</div>
-				<article>
-					<h3>С другой стороны сложившаяся структура организации</h3>
-					<p>С другой стороны сложившаяся структура организации представляет собой интересный эксперимент проверки соответствующий условий активизации.</p>
-					<div class="row">
-						<div class="col-xs-12 pager"><span class="next"><a href="article.html">Читать еще</a></span></div>
-					</div>
-				</article>
-			</section>
-			<section>
-				<div class="meta">
-					<span class="date">10.12.2015</span><span class="separator">|</span><span class="category"><a href="#">Название раздела</a></span>
-				</div>
-				<div class="image" style="background-image:url('images/product-image.jpg');">
-					<img src="images/product-image.jpg" alt="Изображение для статьи 1" />
-				</div>
-				<article>
-					<h3>С другой стороны сложившаяся структура организации</h3>
-					<p>С другой стороны сложившаяся структура организации представляет собой интересный эксперимент проверки соответствующий условий активизации.</p>
-					<div class="row">
-						<div class="col-xs-12 pager"><span class="next"><a href="article.html">Читать еще</a></span></div>
-					</div>
-				</article>
-			</section>
-		</div>
-		<div class="col-xs-8">
-			<section class="big">
-				<div class="meta">
-					<span class="date">10.12.2015</span><span class="separator">|</span><span class="category"><a href="#">Название раздела</a></span>
-				</div>
-				<div class="image" style="background-image:url('images/product-image.jpg');">
-					<img src="images/product-image.jpg" alt="Изображение для статьи 1" />
-				</div>
-				<article>
-					<h3>С другой стороны сложившаяся структура организации представляет собой интересный эксперимент проверки соответствующий условий активизации. Значимость этих проблем настолько очевидна, что консультация с широким</h3>
-					<p>С другой стороны сложившаяся структура организации представляет собой интересный эксперимент проверки соответствующий условий активизации. Значимость этих проблем настолько очевидна, что консультация с широким активом требуют от нас анализа существенных финансовых и административных условий. Не следует, однако забывать, что укрепление и развитие структуры позволяет оценить значение существенных финансовых и административных условий. Разнообразный и богатый опыт новая модель организационной деятельности в значительной степени обуславливает создание дальнейших направлений развития. Идейные соображения высшего порядка, а также консультация с широким активом в значительной степени обуславливает создание форм развития.</p>
-					<p>Товарищи! сложившаяся структура организации позволяет оценить значение систем массового участия. 
-					С другой стороны сложившаяся структура организации представляет собой интересный эксперимент проверки соответствующий условий активизации. Значимость этих проблем настолько очевидна, что консультация с широким активом требуют от нас анализа существенных финансовых и административных условий. Не следует, однако забывать, что укрепление и развитие структуры позволяет оценить значение существенных финансовых и административных условий. Разнообразный и богатый опыт новая модель организационной деятельности в значительной степени обуславливает создание дальнейших направлений развития. Идейные соображения высшего порядка, а также консультация с широким активом в значительной степени обуславливает создание форм развития. </p>
-					<div class="row">
-						<div class="col-xs-12 pager"><span class="next"><a href="article.html">Читать еще</a></span></div>
-					</div>
-				</article>
-			</section>
-		</div>
-	</div>
-	<div class="row pagination-row">
-		<ul class="pagination">
-			<li class="active"><a href="#">1</a></li>
-			<li><a href="#">2</a></li>
-			<li><a href="#">3</a></li>
-			<li><a href="#">4</a></li>
-		</ul>
-	</div>
-	<div class="row">
-		<div class="col-xs-12 heading"><span>Товары, которые Вы недавно смотрели</span></div>
-	</div>
-	<div class="row goods recent-view">
-		<div class="col-xs-2">
-			<div class="item">
-				<div class="image" style="background-image: url('images/tovar-2.jpg');"></div>
-				<a href="product.html">
-					<div class="title">Инициатик - средства против первых морщин</div>
-					<div class="price">
-						<div>3593.37 <span>руб</span></div>
-					</div>
-				</a>
-				<a href="javascript:void(0);" class="to-the-cart"></a>
-			</div>
-		</div>
-		<div class="col-xs-2">
-			<div class="item">
-				<div class="image" style="background-image: url('images/tovar-1.png');"></div>
-				<a href="product.html">
-					<div class="title">Инициатик - средства против первых морщин</div>
-					<div class="price">
-						<div>3593.37 <span>руб</span></div>
-					</div>
-				</a>
-				<a href="javascript:void(0);" class="to-the-cart"></a>
-			</div>
-		</div>
-		<div class="col-xs-2">
-			<div class="item">
-				<div class="image" style="background-image: url('images/tovar-2.jpg');"></div>
-				<a href="product.html">
-					<div class="title">Инициатик - средства против первых морщин</div>
-					<div class="price">
-						<div>3593.37 <span>руб</span></div>
-					</div>
-				</a>
-				<a href="javascript:void(0);" class="to-the-cart"></a>
-			</div>
-		</div>
-		<div class="col-xs-2">
-			<div class="item">
-				<div class="image" style="background-image: url('images/tovar-2.jpg');"></div>
-				<a href="product.html">
-					<div class="title">Инициатик - средства против первых морщин</div>
-					<div class="price">
-						<div>3593.37 <span>руб</span></div>
-					</div>
-				</a>
-				<a href="javascript:void(0);" class="to-the-cart"></a>
-			</div>
-		</div>
-		<div class="col-xs-2">
-			<div class="item">
-				<div class="image" style="background-image: url('images/tovar-2.jpg');"></div>
-				<a href="product.html">
-					<div class="title">Инициатик - средства против первых морщин</div>
-					<div class="price">
-						<div>3593.37 <span>руб</span></div>
-					</div>
-				</a>
-				<a href="javascript:void(0);" class="to-the-cart"></a>
-			</div>
-		</div>
-		<div class="col-xs-2">
-			<div class="item">
-				<div class="image" style="background-image: url('images/tovar-2.jpg');"></div>
-				<a href="product.html">
-					<div class="title">Инициатик - средства против первых морщин</div>
-					<div class="price">
-						<div>3593.37 <span>руб</span></div>
-					</div>
-				</a>
-				<a href="javascript:void(0);" class="to-the-cart"></a>
-			</div>
-		</div>
 	</div>
 </div>
 <!-- footer -->
@@ -484,4 +430,4 @@
 <script src="js/jquery.maskedinput.min.js"></script>
 <script src="js/script.js"></script>
 </body>
-</html>height: 200px;
+</html>
