--- a/www/promo-actions.html
+++ b/www/promo-actions.html
@@ -82,7 +82,7 @@
 			</div>
 			<div class="header-basket-col">
 				<div class="basket">
-					<span class="ico"><span class="badge">115</span></span>
+					<span class="ico"><span class="badge">1</span></span>
 					<span class="total-price underlined">20 547,87 руб</span>
 				</div>
 				<div class="basket-details">
@@ -239,7 +239,7 @@
 	</nav>
 </header>
 <!-- /header -->
-<div class="container content blog">
+<div class="container content actions">
 	<div class="row">
 		<div class="col-xs-6"></div>
 		<div class="col-xs-6 free-shiping free-shiping-2">
@@ -257,93 +257,29 @@
 		<div class="col-xs-12">
 			<div class="ol breadcrumb">
 				<li><a href="#">Главная</a></li>
-				<li class="active">Блог</li>
+				<li class="active">Акции</li>
 			</div>
 		</div>
 	</div>
 	<div class="row">
-		<div class="col-xs-12 blog-intro">
-			<p>С другой стороны сложившаяся структура организации представляет собой интересный эксперимент проверки соответствующий условий активизации. Значимость этих проблем настолько очевидна, что консультация с широким активом требуют от нас анализа существенных финансовых и административных условий. Не следует, однако забывать, что укрепление и развитие структуры позволяет оценить значение существенных финансовых.</p>
+		<div class="col-xs-3">
+			<div class="promo-banner small-height"><a href="promo-action.html"></a></div>
+			<div class="promo-banner big-height"><a href="promo-action.html"></a></div>
+		</div>
+		<div class="col-xs-6">
+			<div class="promo-banner medium-height"><a href="promo-action.html"></a></div>
+			<div class="promo-banner medium-height"><a href="promo-action.html"></a></div>
+			<div class="promo-banner medium-height"><a href="promo-action.html"></a></div>
+		</div>
+		<div class="col-xs-3">
+			<div class="promo-banner big-height"><a href="promo-action.html"></a></div>
+			<div class="promo-banner small-height"><a href="promo-action.html"></a></div>
 		</div>
 	</div>
 	<div class="row">
-		<form id="blog-sorting" action="" method="POST" class="col-xs-12">
-			<h2>Сортируй</h2>
-			<div class="row">
-				<div class="col-xs-5">
-					<label for="blog-sorting-keyword">Ключевое слово</label>
-					<input type="text" id="blog-sorting-keyword" />
-				</div>
-				<div class="col-xs-5">
-					<label for="blog-sorting-title">Название статьи</label>
-					<input type="text"id="blog-sorting-title" />
-				</div>
-				<div class="col-xs-2">
-					<input type="submit" value="Применить">
-				</div>
-			</div>
-		</form>
-	</div>
-	<div class="row">
-		<div class="col-xs-4">
-			<section>
-				<div class="meta">
-					<span class="date">10.12.2015</span><span class="separator">|</span><span class="category"><a href="#">Название раздела</a></span>
-				</div>
-				<div class="image" style="background-image:url('images/product-image.jpg');">
-					<img src="images/product-image.jpg" alt="Изображение для статьи 1" />
-				</div>
-				<article>
-					<h3>С другой стороны сложившаяся структура организации</h3>
-					<p>С другой стороны сложившаяся структура организации представляет собой интересный эксперимент проверки соответствующий условий активизации.</p>
-					<div class="row">
-						<div class="col-xs-12 pager"><span class="next"><a href="article.html">Читать еще</a></span></div>
-					</div>
-				</article>
-			</section>
-			<section>
-				<div class="meta">
-					<span class="date">10.12.2015</span><span class="separator">|</span><span class="category"><a href="#">Название раздела</a></span>
-				</div>
-				<div class="image" style="background-image:url('images/product-image.jpg');">
-					<img src="images/product-image.jpg" alt="Изображение для статьи 1" />
-				</div>
-				<article>
-					<h3>С другой стороны сложившаяся структура организации</h3>
-					<p>С другой стороны сложившаяся структура организации представляет собой интересный эксперимент проверки соответствующий условий активизации.</p>
-					<div class="row">
-						<div class="col-xs-12 pager"><span class="next"><a href="article.html">Читать еще</a></span></div>
-					</div>
-				</article>
-			</section>
+		<div class="col-xs-12">
+			<div class="loader"></div>
 		</div>
-		<div class="col-xs-8">
-			<section class="big">
-				<div class="meta">
-					<span class="date">10.12.2015</span><span class="separator">|</span><span class="category"><a href="#">Название раздела</a></span>
-				</div>
-				<div class="image" style="background-image:url('images/product-image.jpg');">
-					<img src="images/product-image.jpg" alt="Изображение для статьи 1" />
-				</div>
-				<article>
-					<h3>С другой стороны сложившаяся структура организации представляет собой интересный эксперимент проверки соответствующий условий активизации. Значимость этих проблем настолько очевидна, что консультация с широким</h3>
-					<p>С другой стороны сложившаяся структура организации представляет собой интересный эксперимент проверки соответствующий условий активизации. Значимость этих проблем настолько очевидна, что консультация с широким активом требуют от нас анализа существенных финансовых и административных условий. Не следует, однако забывать, что укрепление и развитие структуры позволяет оценить значение существенных финансовых и административных условий. Разнообразный и богатый опыт новая модель организационной деятельности в значительной степени обуславливает создание дальнейших направлений развития. Идейные соображения высшего порядка, а также консультация с широким активом в значительной степени обуславливает создание форм развития.</p>
-					<p>Товарищи! сложившаяся структура организации позволяет оценить значение систем массового участия. 
-					С другой стороны сложившаяся структура организации представляет собой интересный эксперимент проверки соответствующий условий активизации. Значимость этих проблем настолько очевидна, что консультация с широким активом требуют от нас анализа существенных финансовых и административных условий. Не следует, однако забывать, что укрепление и развитие структуры позволяет оценить значение существенных финансовых и административных условий. Разнообразный и богатый опыт новая модель организационной деятельности в значительной степени обуславливает создание дальнейших направлений развития. Идейные соображения высшего порядка, а также консультация с широким активом в значительной степени обуславливает создание форм развития. </p>
-					<div class="row">
-						<div class="col-xs-12 pager"><span class="next"><a href="article.html">Читать еще</a></span></div>
-					</div>
-				</article>
-			</section>
-		</div>
-	</div>
-	<div class="row pagination-row">
-		<ul class="pagination">
-			<li class="active"><a href="#">1</a></li>
-			<li><a href="#">2</a></li>
-			<li><a href="#">3</a></li>
-			<li><a href="#">4</a></li>
-		</ul>
 	</div>
 	<div class="row">
 		<div class="col-xs-12 heading"><span>Товары, которые Вы недавно смотрели</span></div>
